--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  
     <meta http-equiv="X-UA-Compactible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop</title>
+    <title>Shop Here</title>
 
     <link rel="shortcut icon" href="./assets/image/logo/favicon.ico" type="image/x-icon">
 
@@ -45,7 +45,7 @@
 
 
             <div class="newsletter-img">
-                <img src="./IMG.jpg" alt="subscribe newsletter" width="400" height="400">
+                <img src="./jpg.jpg" alt="subscribe newsletter" width="400" height="400">
             </div>
 
             <div class="newsletter-clsose-Btn">
